# Games/Routes/UserRoutes.js
@@ -1,15 +1,15 @@
-module.exports = app => {
-    const userController = require("../Controllers/UserController");
-    const router = require("express").Router();
+// module.exports = app => {
+//     const userController = require("../Controllers/UserController");
+//     const router = require("express").Router();
     
-    router.post("/user/", userController.create);
+//     router.post("/user/", userController.create);
 
-    router.put("/user/:id", userController.update);
+//     router.put("/user/:id", userController.update);
 
-    router.get("/user/", userController.findAll);
-    router.get("/user/:id", userController.findById);
+//     router.get("/user/", userController.findAll);
+//     router.get("/user/:id", userController.findById);
 
-    router.delete("/user/:id", userController.delete);
+//     router.delete("/user/:id", userController.delete);
     
-    app.use("/", router);
-}
+//     app.use("/", router);
+// }
